--- a/movieland/react/moviesite/package.json
+++ b/movieland/react/moviesite/package.json
@@ -16,8 +16,10 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
+    "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
     "node-sass": "^8.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
