--- a/movieland/react/moviesite/package.json
+++ b/movieland/react/moviesite/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/polyfill": "^7.12.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0"
   }
 }
